--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,7 @@ PORT = 5000
 MONGODB_URI = mongodb://localhost:27017/electronicstore
 
 JWT_SECRET = vietnam
+EMAIL_APP_PASSWORD = fhry aqkp mydz dfew
+EMAIL_NAME = thongbphe171683@fpt.edu.vn
+
+URL_SERVER=http://localhost:5000
