--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
