#16 Upload Image and Add to cart

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,7 @@ EMAIL_APP_PASSWORD = fhry aqkp mydz dfew
 EMAIL_NAME = thongbphe171683@fpt.edu.vn
 
 URL_SERVER=http://localhost:5000
+
+CLOUDINARY_NAME=dbvevp4ox
+CLOUDINARY_KEY=288145931844973
+CLOUDINARY_SECRET=jkMrCtcO59SYaO3WBtPo2khxo8g
